--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.bg_img_holder {
+  background-image: url("/form_img.jpeg");
+
+
+}
