--- a/app/globals.css
+++ b/app/globals.css
@@ -26,11 +26,22 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
-.bg_img_holder {
-  background-image: url("/form_img.jpeg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+@media screen and (max-width: 600px) {
+  .sm_img_holder {
+    background-image: url("/form_img.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+  
+}
+@media screen and (min-width: 600px) {
+  .bg_img_holder {
+    background-image: url("/form_img.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
 }
 
 
@@ -41,7 +52,7 @@ body {
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
