--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,11 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --dark-color: #232323;
+  --light-color: #e0dfdfeb;
+  --transluscent-color: #e0e3e300;
+  --accent-color: #0b676c;
+  --box-shadow-dark: 5px 5px 10px rgb(33, 34, 34);
 }
 
 @theme inline {
@@ -44,6 +49,57 @@ body {
   }
 }
 
+/* support form */
+.support_form{
+  background-color: var(--transluscent-color);
+  padding: 1.5rem;
+  color: var(--dark-color);
+  border-radius: 7px;
+  /* box-shadow: var(--box-shadow-dark); */
+}
+#form_title{
+  letter-spacing: 3px;
+  color: var(--dark-color);
+  font-variant: small-caps;
+  font-size: var(--fs-med);
+  text-align: center;
+}
+.form_unit > input, .form_unit > textarea {
+  width: 100%;
+  padding: 0.7rem 1rem 0;
+  background: none;
+  outline:none;
+  border: none;
+  font-size: 0.8rem;
+  letter-spacing: 2px;
+  border-bottom: 2px solid var(--accent-color);
+}
+.form_unit > label{
+text-transform: capitalize;
+}
+.form_unit > textarea {
+  border-bottom: none;
+  background-color: var(--light-color);
+  margin: 0.8rem 0;
+}
+#submit_btn{
+  background-color: var(--accent-color);
+  color:var(--dark-color);
+  cursor: pointer;
+  font-variant: small-caps;
+  padding:0.6rem 2.5rem;
+  border:none;
+  outline:none;
+  font-size: var(--fs_med);
+  font-weight: 600;
+  border-radius:4px;
+  transition: all 300ms ease;
+}
+#submit_btn:hover{
+  background-color: var(--light-color);
+  color: var(--accent-color);
+  opacity: 0.6;
+}
 
 /* Customize the label (the container) */
 .container {
