--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,14 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+td, th {
+  padding: 12px 12px;
+}
+th {
+  background-color: #0b676c;
+  text-align: left;
+}
+
 @media screen and (max-width: 600px) {
   .sm_img_holder {
     background-image: url("/form_img.jpeg");
