feat: add date limits

--- a/app/globals.css
+++ b/app/globals.css
@@ -93,7 +93,7 @@ td, th {
   padding: 12px 12px;
 }
 th {
-  background-color: #0b676c;
+  background-color: #125b71;
   text-align: left;
   text-transform: uppercase;
   color: #fff;
