--- a/app/globals.css
+++ b/app/globals.css
@@ -348,6 +348,7 @@ text-transform: capitalize;
 }
 
 .dark {
+  --accent-color: #125b71;
   --background: oklch(0.141 0.005 285.823);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.21 0.006 285.885);
